# tptg

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPolycode.cmake  ResourcesPath.h.in
docs/: CMakeLists.txt  Doxyfile.in
resources/: ball_paint.sprites  balls_crosshair.sprites  balls_deep.sprites  balls_deep_counter.sprites  cross.sprites  explosion.xml  inventoryIndex.sprites  items.sprites  runningChamp.sprites  runningChamp.xml  runningChamp2.sprites  sleeping_guy.sprites
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/TeaParty/: CMakeLists.txt  PolycodeTemplate-Info.plist.in  PolycodeTemplateAppDelegate.h  PolycodeTemplateAppDelegate.mm  PolycodeTemplateEntryPoint.cpp  PolycodeTemplateEntryPoint.h  TeaPartyWinMain.cpp
src/apps/TeaParty/Base.lproj/: MainMenu.xib
src/apps/TeaParty/Components/: ActionController.cpp  ActionController.h  Position.cpp  Position.h
src/apps/TeaParty/Systems/: KeyboardController.cpp  KeyboardController.h
src/apps/TeaParty/en.lproj/: Credits.rtf
src/libs/: CMakeLists.txt
src/libs/TeaPartyLib/: Animation.h  CMakeLists.txt  Game.cpp  Game.h  InventoryStruct.h  Level.cpp  Level.h  Vec2.h  globals.h
src/libs/TeaPartyLib/Archetypes/: Colliders.cpp  Colliders.h  NodeCamera.cpp  NodeCamera.h  TriggersActors.cpp  TriggersActors.h
src/libs/TeaPartyLib/Components/: ActionController.h  AnimationList.h  AnimationStillFrame.h  BallsPoint.h  CallbackNoParam.h  CallbackOnActor.h  ClippedScene.cpp  ClippedScene.h  Controller.h  Displacement.h  Extent.h  GamePhase.h  HudItem.h  IWantToDie.h  Image.h  Index.h  Inventory.h  Keyboard.h  Pendular.h  Physics.h  PlayerReference.h  PointsTarget.h  Position.h  Score.h  SelectedPhase.h  Speed.h  Sprite.h  Static.h  TriggeringAction.h  Tween.h
src/libs/TeaPartyLib/Systems/: AnimationDispatcher.cpp  AnimationDispatcher.h  CameraController.cpp  CameraController.h  CollisionSolver.cpp  CollisionSolver.h  ControllerController.cpp  ControllerController.h  Destruction.cpp  Destruction.h  Display.cpp  Display.h  Friction.cpp  Friction.h  HudDisplay.cpp  HudDisplay.h  Input.cpp  Input.h  Inventory.cpp  Inventory.h  InventoryLayout.cpp  InventoryLayout.h  KeyboardController.cpp  KeyboardController.h  Move.cpp  Move.h  PendulumPhysics.cpp  PendulumPhysics.h  PhaseController.cpp  PhaseController.h  Physics.cpp  Physics.h  PointCounter.cpp  PointCounter.h  PointVisualisation.cpp  PointVisualisation.h  PointsTrigger.cpp  PointsTrigger.h  ScoreDisplay.cpp  ScoreDisplay.h  (+5 more)
src/libs/libExample/: CMakeLists.txt
